--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
       </button>
       <div class="mobile">
         <a href="index.html">Menu</a>
-        <a href="tel:+233542939878">Call to Order</a>
-        <a href="https://maps.app.goo.gl/vrmRhfdzmv59LrdH7">Show on Map</a>
+        <a href="tel:0542816160">Call to Order</a>
+        <a href="https://wa.me/+233506402367">WhatsApp to Order</a>
+        <a href="https://maps.app.goo.gl/BpCxU3xCzEtBJLFZ6">Show on Map</a>
+        
       </div>
     </div>
 
