--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta name="author" content="Foodbites By Ann" />
     <meta name="robots" content="index, follow" />
     <title>Foodbites By Ann - Danyame Kumasi</title>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<link rel="icon" href="./images/logo.png" sizes="180x180" type="image/png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
