--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
       <div class="menu_list">
         <h1>Fried Rice</h1>
-        <p>Egg — GHS 45</p>
+        <p>Egg — GHS 50</p>
         <p>Seafood — GHS 70</p>
-        <p>Chicken — GHS 50</p>
-        <p>Assorted — GHS 65</p>
+        <p>Chicken — GHS 60</p>
+        <p>Assorted — GHS 75</p>
         <p>Beef — GHS 60</p>
 
         <h1>Jollof</h1>
@@ -63,15 +63,15 @@
         <p>Chicken — GHS 55</p>
 
         <h1>Stir Fry Noodles / Spaghetti</h1>
-        <p>Egg — GHS 30</p>
-        <p>Seafood — GHS 60</p>
-        <p>Spicy Goat — GHS 50</p>
-        <p>Beef — GHS 45</p>
-        <p>Chicken — GHS 40</p>
+        <p>Egg — GHS 40</p>
+        <p>Seafood — GHS 70</p>
+        <p>Spicy Goat — GHS 65</p>
+        <p>Beef — GHS 60</p>
+        <p>Chicken — GHS 55</p>
 
         <h1>Loaded Fries / Loaded Yam (Chicken or Beef)</h1>
-        <p>With Cheese — GHS 65</p>
-        <p>Without Cheese — GHS 60</p>
+        <p>With Cheese — GHS 70</p>
+        <p>Without Cheese — GHS 65</p>
 
         <h1>Banku and Tilapia</h1>
         <p>Price Range — GHS 75 - 120</p>
@@ -80,7 +80,7 @@
         <p>GHS 120</p>
 
         <h1>Drinks</h1>
-        <p>Juices — GHS 10</p>
+        <p>Juices — GHS 12 & 15</p>
         <p>Coke/Fanta Orange/Fanta Pineapple/Sprite 1.5L — GHS 35</p>
         <p>Coke/Fanta Orange/Fanta Pineapple/Sprite 1L — GHS 30</p>
         <p>Coke/Fanta Pineapple/Fanta Orange 300ml — GHS 7</p>
