--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
         <p>Beef — GHS 60</p>
 
         <h1>Jollof</h1>
-        <p>Goat — GHS 65</p>
-        <p>Beef — GHS 60</p>
-        <p>Chicken — GHS 55</p>
+        <p>Goat — GHS 70</p>
+        <p>Beef — GHS 65</p>
+        <p>Chicken — GHS 60</p>
+        <p>Assorted — GHS 75</p>
 
         <h1>Stir Fry Noodles / Spaghetti</h1>
         <p>Egg — GHS 40</p>
